fix paths to test server

--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -68,7 +68,7 @@ steps:
     displayName: "Vet"
 
   - pwsh: |
-      pushd ./src/node_modules/@microsoft.azure/autorest.testserver
+      pushd ./packages/autorest.go/node_modules/@microsoft.azure/autorest.testserver
       npm run start:prod&
       popd
       $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir ${{ parameters.GoTestPath }})
@@ -81,7 +81,7 @@ steps:
       pushd ./test/autorest
       go run ./covreport/main.go
       popd
-      pushd ./src/node_modules/@microsoft.azure/autorest.testserver
+      pushd ./packages/autorest.go/node_modules/@microsoft.azure/autorest.testserver
       npm stop
       popd
     displayName: "Run Acceptance Tests"
@@ -89,7 +89,7 @@ steps:
 
   - pwsh: npm test
     displayName: "Run Unit Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/src
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
   - task: PublishTestResults@2
     inputs:
@@ -101,7 +101,7 @@ steps:
       - pwsh: |
           $currentVersion = node -p -e "require('./src/package.json').version";
           $currentVersion="$currentVersion-$(Build.BuildNumber)";
-          cd src/node_modules/@microsoft.azure/autorest.testserver;
+          cd packages/autorest.go/node_modules/@microsoft.azure/autorest.testserver;
           npm run coverage -- publish --repo=$(Build.Repository.Name) --ref=$(Build.SourceBranch) --githubToken=$(github-token) --azStorageAccount=$(storage-coverage-user) --azStorageAccessKey=$(storage-coverage-pass) --version=$currentVersion;
         displayName: "Publish AutoRest Test Server Coverage Report"
         workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
