--- a/packages/autorest.go/tsconfig.json
+++ b/packages/autorest.go/tsconfig.json
@@ -14,6 +14,8 @@
     "declaration": true,
     "stripInternal": true,
     "noEmitHelpers": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "esModuleInterop": true,
     "target": "es6",
     "types": ["node", "jest"],
