--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -64,7 +64,7 @@ steps:
         if (!$?) {
           $exit = 1
         }
-        shadow ./...
+        $HOME/go/bin/shadow ./...
         if (!$?) {
           $exit = 1
         }
