--- a/packages/autorest.go/tsconfig.json
+++ b/packages/autorest.go/tsconfig.json
@@ -28,6 +28,6 @@
     "strictNullChecks": true,
     "useUnknownInCatchVariables": false
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["dist", "resources", "node_modules", "**/*.d.ts", "generated"]
 }
