Fix eslint config file and clean up lint
Added lint step to CI.

--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -8,6 +8,11 @@ steps:
     displayName: "Build Generator Sources"
 
   - script: |
+      npm run eslint
+    displayName: "Run Lint"
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
+
+  - script: |
       rush regenerate
       rush modtidy 2>&1
       git add -A ./test/.
